K8/cluster-apps/app-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-store-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
        - name: whereami
          image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ext-store-v1
spec:
  selector:
    app: store
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
