K8/cluster-apps/app-external-http-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-regional-http
spec:
  # Name of an existing GatewayClass.
  gatewayClassName: gke-l7-regional-external-managed
  # Listen for HTTPS traffic on port 443
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  # The name of the static IP address of the external load balancer.
  # You can also use the `IPAddress` type to specify the actual IP address.
  addresses:
    - type: NamedAddress
      # The name of the created resource in module.gke.google_compute_address.external_load_balancer
      value: gke-external-load-balancer
