K8/cluster-apps/app-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: store-external
spec:
  parentRefs:
    # Bind the route to the 'external-http' Gateway.
    - kind: Gateway
      name: external-http
  hostnames:
    - "store.example.com"
  rules:
    # Default rule for store.example.com that sends traffic to the store-v1 service.
    - backendRefs:
        - name: store-v1
          port: 8080
    # Match requests with the "env: canary" header and send them to the store-v2 service.
    - matches:
        - headers:
            - name: env
              value: canary
      backendRefs:
        - name: store-v2
          port: 8080
    # Match requests with the path "/de" and sends them to the store-german service.
    - matches:
        - path:
            value: /de
      backendRefs:
        - name: store-german
          port: 8080
